--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
     "openai": "^4.60.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
